# sophia-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: lint_and_test.yml
examples/: lang.ttl  msg-1.nt  msg-2.nt  persons.rq  sample.nt  social.ttl
src/: absolutize.rs  canonicalize.rs  common.rs  dispatch.rs  filter.rs  main.rs  map.rs  merge.rs  merge_default_graph.rs  null.rs  parse.rs  query.rs  relativize.rs  serialize.rs
src/canonicalize/: c14n_function.rs  hash_function.rs
src/common/: f64.rs  file_or_url.rs  files_or_url.rs  format.rs  pipe.rs  prefix_map.rs  quad_handler.rs  quad_iter.rs  verbosity.rs
