[package]
name = "sophia-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.54", features = ["derive", "env", "wrap_help"] }
clap-markdown = { version = "0.1.5", optional = true }
clap-verbosity = "2.1.0"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
rio_turtle = { version = "0.8.5", features = ["generalized"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.sophia]
version = "0.9.0"
features = ["file_url", "http_client", "jsonld", "reasoner", "sparql", "xml"]
# path = "../sophia_rs/sophia"
git = "https://github.com/pchampin/sophia_rs.git"
rev = "60f55f8"

[features]
default = []
# This feature is not meant to be used in production, only to generate a markdown help file.
markdown-help = ["dep:clap-markdown"]

[[bin]]
name = "sop"
path = "src/main.rs"

[dev-dependencies]
test-case = "3.3.1"
